# flask-swagger-ui

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  setup.py  test.sh  test_e2e.py  update-dist.sh
.github/workflows/: release.yml
flask_swagger_ui/: __init__.py  flask_swagger_ui.py
flask_swagger_ui/templates/: index.template.html
