[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-swagger-ui"
version = "5.32.4"
description = "Swagger UI blueprint for Flask"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["flask", "swagger"]
authors = [
    { name = "Svein Tore Koksrud Seljebotn", email = "sveint@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = ["flask"]

[project.urls]
Homepage = "https://github.com/sveint/flask-swagger-ui"

[tool.setuptools.packages.find]
include = ["flask_swagger_ui"]

[tool.setuptools.package-data]
flask_swagger_ui = [
    "LICENSE",
    "README.md",
    "templates/*.html",
    "dist/VERSION",
    "dist/LICENSE",
    "dist/README.md",
    "dist/*.html",
    "dist/*.js",
    "dist/*.css",
    "dist/*.png",
]
